.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:06:14 **** Build of configuration Debug for project Assignment1_Binary_Tree ****
make all 
Building file: ../src/Assignment1_Binary_Tree.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment1_Binary_Tree.d" -MT"src/Assignment1_Binary_Tree.o" -o "src/Assignment1_Binary_Tree.o" "../src/Assignment1_Binary_Tree.cpp"
../src/Assignment1_Binary_Tree.cpp:34:2: error: ‘allNodes’ does not name a type
   34 |  allNodes[0] = root;
      |  ^~~~~~~~
make: *** [src/subdir.mk:20: src/Assignment1_Binary_Tree.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
